GNOME Bugzilla – Bug 396161
GtkUIManager crashing on unknown action in ui-file
Last modified: 2007-01-14 05:34:46 UTC
If an ui-file loaded by gtk_ui_manager_add_ui_from_file() has an action key not previously registered by gtk_action_group_add_action() there is a crash find_menu_position(). It can be easily avoided by the following patch. If accepted the same should probably be done for find_toolbar_position().
Created attachment 80187 [details] [review] patch mentioned above
2007-01-13 Matthias Clasen <mclasen@redhat.com> * gtk/gtkuimanager.c: Don't crash if menu or toolbar positions can't be found. (#396161, Hans Breuer)